--- a/about.html
+++ b/about.html
@@ -54,17 +54,17 @@
         <tbody>
             <tr>
                 <td>HTML</td>
-                <td>0</td>
+                <td>Less than 1 year</td>
                 <td>Beginner</td>
             </tr>
             <tr>
                 <td>CSS</td>
-                <td>0</td>
+                <td>Less than 1 year</td>
                 <td>Beginner</td>
             </tr>
             <tr>
                 <td>JavaScript</td>
-                <td>0</td>
+                <td>Less than 1 year</td>
                 <td>Beginner</td>
             </tr>
             </tbody>
