--- a/index.html
+++ b/index.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria Vasiliki Anastasopoulou</title>
-    <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="shortcut icon" href="/img/favicon-32x32.png" type="image/png">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.google.com/share?selection.family=Lato:wght@400;700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.production.css">
 </head>
+
 <body>
     <header class="page-header">
-        <img src="img/my-logo.svg" alt="my personal logo" class="page-header__item">
+        <img src="img/website-logo.svg" alt="my personal logo" class="page-header__item">
         <nav class="page-header__item">
             <ul role="menubar" class="navigation-list">
-                <li role="presentation"> 
-                    <a href="./index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a> 
+                <li role="presentation">
+                    <a href="./index.html" role="menuitem"
+                        class="navigation-list__item navigation-list__item--active">Home</a>
                 </li>
-                <li role="presentation"> 
-                    <a href="./about.html" role="menuitem" class="navigation-list__item">About me</a> 
+                <li role="presentation">
+                    <a href="./about.html" role="menuitem" class="navigation-list__item">About me</a>
                 </li>
                 <li role="presentation">
                     <a href="./work.html" role="menuitem" class="navigation-list__item">Work</a>
-                </li> 
-                <li role="presentation"> 
-                    <a href="./contact.html" role="menuitem" class="navigation-list__item">Contact</a> 
-                </li>                       
+                </li>
+                <li role="presentation">
+                    <a href="./contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="profile">
             <img src="img/profile-photo.png" class="profile_portrait" alt="Maria Vasiliki Anastasopoulou portrait">
-            <h1 id="top" >Hello World!</h1>
-            <p>My name is Maria Vasiliki Anastasopoulou and I'm a <span>web</span> developer (still in training) from Greece. </p>
+            <h1 id="top">Hello World!</h1>
+            <p>My name is Maria Vasiliki Anastasopoulou and I'm a <span>web</span> developer (still in training) from
+                Greece. </p>
+            <p>
             <a href="#">Check some of my work</a>
-        </div>
-        <div>
-        <a href="#">Default link</a>
-        <button type="button">Default Button</button>
-        <button class="button_secondary">Secondary Button</button>
+            </p>
         </div>
     </main>
     <footer class="page-footer">
         <div class="social-media">
-        <p>Find me on</p>
-        <img src="img/linkedinicon.svg" alt="Linkedin">
-        <img src="img/4747499_github_icon.svg" alt="Github">
+            <p>Find me on</p>
+            <img src="img/linkedinicon.svg" alt="Linkedin">
+            <img src="img/4747499_github_icon.svg" alt="Github">
         </div>
         <p>
-        <a id="back-to-top" href="#top">Back to top</a>
+            <a id="back-to-top" href="#top">Back to top</a>
         </p>
     </footer>
     <script src="./js/tota11y.min.js"></script>
 </body>
+
 </html>
