--- a/work.html
+++ b/work.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria Vasiliki Anastasopoulou</title>
-    <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
+    <link rel="shortcut icon" href="/img/favicon-32x32.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.google.com/share?selection.family=Lato:wght@400;700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.production.css">
 </head>
 <body>
     <header class="page-header">
-        <img src="img/my-logo.svg" alt="my personal logo" class="page-header__item">
+        <img src="img/website-logo.svg" alt="my personal logo" class="page-header__item">
         <nav class="page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation"> 
@@ -31,7 +31,7 @@
     </header>
    <!--Main content-->
    <section>
-    <h1>Work</h1>
+    <h1 class="work">Work</h1>
     <div class="grid">
         <!--Grid items will live here-->
         <div class="grid__item">
