Updated check my work link
Changed /index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>My name is Maria Vasiliki Anastasopoulou and I'm a <span>web</span> developer (still in training) from
                 Greece. </p>
             <p>
-            <a href="#">Check some of my work</a>
+            <a href="./work.html">Check some of my work</a>
             </p>
         </div>
     </main>
