--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria Vasiliki Anastasopoulou</title>
-    <link rel="shortcut icon" href="/img/favicon-32x32.png" type="image/png">
+    <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.google.com/share?selection.family=Lato:wght@400;700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.production.css">
