added the meet app project to the work page

--- a/work.html
+++ b/work.html
@@ -50,9 +50,12 @@
             <a href="#">See project on Github</a>
         </div>
         <div class="grid__item">
-            <h2>Title of project 4</h2>
-            <p>Short description</p>
-            <a href="#">See project on GitHub</a>
+            <h2>Meet App</h2>
+            <img src="img\MeetApp_screenshot.png" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
+            <p>The Meet App is a serverless, progressive web application (PWA) designed for event discovery, built using React and a test-driven development (TDD) approach. It integrates with the Google Calendar API to fetch and display upcoming events.</p>
+            <a href="https://malvinaana.github.io/meet/">Visit app</a>
+            <br>
+            <a href="https://github.com/MalvinaAna/meet">See project on GitHub</a>            
         </div>
         <div class="grid__item">
             <h2>Title of project 5</h2>
