--- a/work.html
+++ b/work.html
@@ -35,19 +35,28 @@
     <div class="grid">
         <!--Grid items will live here-->
         <div class="grid__item">
-            <h2>Title of project 1</h2>
-            <p> Short description</p>
-            <a href="#">See project on GitHub</a>
+            <h2>JS App</h2>
+            <img src="img\JSApp_screenshot.png" alt="JS App screenshot" style="max-width: 100%; height: auto;">
+            <p> Small web Pokédex-like application with HTML, CSS, and JavaScript that loads data from an external API and enables the viewing of data points in detail.</p>
+            <a href="https://malvinaana.github.io/js-app/">Visit app</a>
+            <br>
+            <a href="https://github.com/MalvinaAna/js-app">See project on GitHub</a>
         </div>
         <div class="grid__item">
-            <h2>Title of project 2</h2>
-            <p>Short description</p>
-            <a href="#">See project on GitHub</a>
+            <h2>myFlix App</h2>
+            <img src="img\myFlixApp_screenshot.png" alt="JS App screenshot" style="max-width: 100%; height: auto;">
+            <p>React app where registered users can browse a list of movies and save their favorites. Built with React Bootstrap for styling, it’s optimized with Parcel for quick load times and deployed on Netlify for easy access.</p>
+            <a href="https://myflix-movies-application.netlify.app/">Visit app</a>
+            <br>
+            <a href="https://github.com/MalvinaAna/myFlix-client">See project on GitHub</a>
         </div>
         <div class="grid__item">
-            <h2>Title of project 3</h2>
-            <p>Short description</p>
-            <a href="#">See project on Github</a>
+            <h2>To Do List App</h2>
+            <img src="img\ToDoListApp_screenshot.png" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
+            <p>A simple, interactive to-do list application built with HTML, CSS, and JavaScript. This app allows users to add, delete, and manage tasks, providing a straightforward way to keep track of daily activities.</p>
+            <a href="https://malvinaana.github.io/to-do-list-app/le">Visit app</a>
+            <br>
+            <a href="https://github.com/MalvinaAna/to-do-list-app">See project on Github</a>
         </div>
         <div class="grid__item">
             <h2>Meet App</h2>
@@ -58,22 +67,30 @@
             <a href="https://github.com/MalvinaAna/meet">See project on GitHub</a>            
         </div>
         <div class="grid__item">
-            <h2>Title of project 5</h2>
-            <p>Short description</p>
-            <a href="#">See project on GitHub</a>
+            <h2>myChatApp</h2>
+            <img src="img\myChatApp_screenshot.jpg" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
+            <p>A mobile chat application built with React Native. It offers users a chat interface along with the ability to share images and location data. The app is compatible with both iOS and Android devices and utilizes Google Firestore/Firebase for storing messages and images.</p>
+            <a href="https://github.com/MalvinaAna/chat-app">See project on GitHub</a>
         </div>
         <div class="grid__item">
-            <h2>Title of project 6</h2>
-            <p>Short description</p>
-            <a href="#">See project on GitHub</a>
+            <h2>myFlix App - Angular</h2>
+            <img src="img\myFlixAppAngular_screenshot.png" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
+            <p>Angular application where registered users can browse a list of movies and save their favorites. Built using the Angular CLI, it offers a streamlined and responsive interface for easy movie exploration and bookmarking.</p>
+            <a href="https://malvinaana.github.io/meet/">Visit app</a>
+            <br>
+            <a href="https://github.com/MalvinaAna/myFlix-Angular-client">See project on GitHub</a>
         </div>
     </div>
    </section>
     <footer class="page-footer">
         <div class="social-media">
         <p>Find me on</p>
-        <img src="img/linkedinicon.svg" alt="Linkedin">
-        <img src="img/4747499_github_icon.svg" alt="Github">
+        <a href="https://www.linkedin.com/in/maria-vasiliki-anastasopoulou-5b5a36145?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+          <img src="img/linkedinicon.svg" alt="Linkedin">
+        </a>
+        <a href="https://github.com/MalvinaAna" target="_blank">
+          <img src="img/4747499_github_icon.svg" alt="Github">
+        </a>
         </div>
         <p>
         <a id="back-to-top" href="#top">Back to top</a>
