--- a/contact.html
+++ b/contact.html
@@ -31,37 +31,21 @@
     </header>
     <main class="contact">
         <h1>Contact information:</h1>
-        <a href="tel:+306989870122" >Tel: +30 6989870122 </a>
-        <br>
         <a href="mailto:malvina@windowslive.com">malvina@windowslive.com</a>
-        <br>
-        <a href="skype:live:.cid.a617c224c936f68a">Skype</a>
         <br>
         <br>    
         <a href="#">Check some of my work</a>
         <br>
-        <br>
-        
-        Contact form:
-            <form action="#" method="post" id="contact-form">
-                <label class="standard label" for="contact-email">E-mail:</label>
-                <input type="email" id="contact-email" required>
-                <br>
-                <label class="standard label" for="telephone">Telephone:</label>
-                <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-                <br>
-                <label class="standard label" for="message">Message:</label>
-                <textarea maxlength="240" id="message" required></textarea>
-                <br>
-                <br>
-                <input type="submit" value="Send message">
-                </form>
     </main>
     <footer class="page-footer">
         <div class="social-media">
         <p>Find me on</p>
-        <img src="img/linkedinicon.svg" alt="Linkedin">
-        <img src="img/4747499_github_icon.svg" alt="Github">
+        <a href="https://www.linkedin.com/in/maria-vasiliki-anastasopoulou-5b5a36145?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+          <img src="img/linkedinicon.svg" alt="Linkedin">
+        </a>
+        <a href="https://github.com/MalvinaAna" target="_blank">
+          <img src="img/4747499_github_icon.svg" alt="Github">
+        </a>
         </div>
         <p>
         <a id="back-to-top" href="#top">Back to top</a>
