--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
     <footer class="page-footer">
         <div class="social-media">
             <p>Find me on</p>
-            <img src="img/linkedinicon.svg" alt="Linkedin">
-            <img src="img/4747499_github_icon.svg" alt="Github">
+            <a href="https://www.linkedin.com/in/maria-vasiliki-anastasopoulou-5b5a36145?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+              <img src="img/linkedinicon.svg" alt="Linkedin">
+            </a>
+            <a href="https://github.com/MalvinaAna" target="_blank">
+              <img src="img/4747499_github_icon.svg" alt="Github">
+            </a>
         </div>
         <p>
             <a id="back-to-top" href="#top">Back to top</a>
