--- a/work.html
+++ b/work.html
@@ -38,47 +38,47 @@
             <h2>JS App</h2>
             <img src="img\JSApp_screenshot.png" alt="JS App screenshot" style="max-width: 100%; height: auto;">
             <p> Small web Pokédex-like application with HTML, CSS, and JavaScript that loads data from an external API and enables the viewing of data points in detail.</p>
-            <a href="https://malvinaana.github.io/js-app/">Visit app</a>
+            <a href="https://malvinaana.github.io/js-app/" target="_blank">Visit app</a>
             <br>
-            <a href="https://github.com/MalvinaAna/js-app">See project on GitHub</a>
+            <a href="https://github.com/MalvinaAna/js-app" target="_blank">See project on GitHub</a>
         </div>
         <div class="grid__item">
             <h2>myFlix App</h2>
             <img src="img\myFlixApp_screenshot.png" alt="JS App screenshot" style="max-width: 100%; height: auto;">
             <p>React app where registered users can browse a list of movies and save their favorites. Built with React Bootstrap for styling, it’s optimized with Parcel for quick load times and deployed on Netlify for easy access.</p>
-            <a href="https://myflix-movies-application.netlify.app/">Visit app</a>
+            <a href="https://myflix-movies-application.netlify.app/" target="_blank">Visit app</a>
             <br>
-            <a href="https://github.com/MalvinaAna/myFlix-client">See project on GitHub</a>
+            <a href="https://github.com/MalvinaAna/myFlix-client" target="_blank">See project on GitHub</a>
         </div>
         <div class="grid__item">
             <h2>To Do List App</h2>
             <img src="img\ToDoListApp_screenshot.png" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
             <p>A simple, interactive to-do list application built with HTML, CSS, and JavaScript. This app allows users to add, delete, and manage tasks, providing a straightforward way to keep track of daily activities.</p>
-            <a href="https://malvinaana.github.io/to-do-list-app/le">Visit app</a>
+            <a href="https://malvinaana.github.io/to-do-list-app/" target="_blank">Visit app</a>
             <br>
-            <a href="https://github.com/MalvinaAna/to-do-list-app">See project on Github</a>
+            <a href="https://github.com/MalvinaAna/to-do-list-app" target="_blank">See project on Github</a>
         </div>
         <div class="grid__item">
             <h2>Meet App</h2>
             <img src="img\MeetApp_screenshot.png" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
             <p>The Meet App is a serverless, progressive web application (PWA) designed for event discovery, built using React and a test-driven development (TDD) approach. It integrates with the Google Calendar API to fetch and display upcoming events.</p>
-            <a href="https://malvinaana.github.io/meet/">Visit app</a>
+            <a href="https://malvinaana.github.io/meet/" target="_blank">Visit app</a>
             <br>
-            <a href="https://github.com/MalvinaAna/meet">See project on GitHub</a>            
+            <a href="https://github.com/MalvinaAna/meet" target="_blank">See project on GitHub</a>            
         </div>
         <div class="grid__item">
             <h2>myChatApp</h2>
             <img src="img\myChatApp_screenshot.jpg" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
             <p>A mobile chat application built with React Native. It offers users a chat interface along with the ability to share images and location data. The app is compatible with both iOS and Android devices and utilizes Google Firestore/Firebase for storing messages and images.</p>
-            <a href="https://github.com/MalvinaAna/chat-app">See project on GitHub</a>
+            <a href="https://github.com/MalvinaAna/chat-app" target="_blank">See project on GitHub</a>
         </div>
         <div class="grid__item">
             <h2>myFlix App - Angular</h2>
             <img src="img\myFlixAppAngular_screenshot.png" alt="Meet App screenshot" style="max-width: 100%; height: auto;">
             <p>Angular application where registered users can browse a list of movies and save their favorites. Built using the Angular CLI, it offers a streamlined and responsive interface for easy movie exploration and bookmarking.</p>
-            <a href="https://malvinaana.github.io/meet/">Visit app</a>
+            <a href="https://malvinaana.github.io/meet/" target="_blank">Visit app</a>
             <br>
-            <a href="https://github.com/MalvinaAna/myFlix-Angular-client">See project on GitHub</a>
+            <a href="https://github.com/MalvinaAna/myFlix-Angular-client" target="_blank">See project on GitHub</a>
         </div>
     </div>
    </section>
