last project added

--- a/work.html
+++ b/work.html
@@ -80,6 +80,14 @@
             <br>
             <a href="https://github.com/MalvinaAna/myFlix-Angular-client" target="_blank">See project on GitHub</a>
         </div>
+        <div class="grid__item">
+          <h2>Recipe App</h2>
+          <img src="img\recipe_app.jpg" alt="Recipe App screenshot" style="max-width: 100%; height: auto;">
+          <p>Django web application where registered users can browse a curated list of recipes and save their favorites. Built with Django, it offers a responsive interface with seamless recipe exploration.</p>
+          <a href="https://mighty-stream-61331-e042ffea2755.herokuapp.com/" target="_blank">Visit app</a>
+          <br>
+          <a href="https://github.com/MalvinaAna/recipe-app" target="_blank">See project on GitHub</a>
+      </div>
     </div>
    </section>
     <footer class="page-footer">
